# nubis

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
crates/nubis-cli/: Cargo.toml
crates/nubis-cli/src/: main.rs
crates/nubis-core/: Cargo.toml
crates/nubis-core/src/: classification.rs  cloud.rs  error.rs  filter.rs  geostatistics.rs  interpolation.rs  io.rs  lib.rs  normals.rs  octree.rs
docs/: index.html
